@@ -1,0 +1,6 @@
+[Dictionary Source]
+Name=Thai
+_Description=Longdo Thai-English Dictionaries
+Transport=dictd
+Hostname=dict.longdo.com
+Port=2628
