@@ -1,3 +1,9 @@
+2006-12-01  Emmanuele Bassi  <ebassi@cvs.gnome.org>
+
+	* data/Makefile.am:
+	* data/thai.desktop.in: Add a thai dictionary
+	source (#372386, Theppitak Karoonboonyanan)
+
 2006-11-28  Emmanuele Bassi  <ebassi@cvs.gnome.org>
 
 	* libgdict/gdict-defbox.c:
